fix: content overflow for `Request` section

--- a/src/components/body-editor/body-editor.module.scss
+++ b/src/components/body-editor/body-editor.module.scss
@@ -1,3 +1,3 @@
 .editor__selector {
-  margin-bottom: 0.5rem;
+  margin-block: 0.25rem;
 }
