--- a/src/components/request-options/request-options.module.scss
+++ b/src/components/request-options/request-options.module.scss
@@ -34,6 +34,6 @@
 }
 
 .tabsContent {
-  padding: 1rem 0;
+  padding-bottom: 1rem;
   background-color: #fff;
 }
